--- a/cv.tex
+++ b/cv.tex
@@ -41,11 +41,11 @@
           \item Shows paths with least station, least interchange or paths that avoid certain fare zones.
         \end{itemize}
 
-        \item A Tetris bot in Python which can reliably keep itself alive long enough to reach a 1000 blocks limit, and scored 3rd place in the 140 persons class.
+        \item A Tetris bot in Python which can reliably keep itself alive long enough to reach a 1000 blocks limit, and scored 3rd place in the 140 person class.
 
         \item Designed and wrote a system specification for a hypothetical good delivery service for vulnerable people during COVID, matching requests with volunteers with an efficient algorithm. Received a top submission award.
 
-        \item Led a 3-person team on implementing a bash-like shell in Java, with piping, substitution, glob expansion and 97\% test coverage. Built an \href{https://jsh-sandbox.maowtm.org}{\color{link}online sandbox} for the shell with Docker, Rust and Xterm.js.
+        \item Led a 3-person team on implementing a bash-like shell in Java, with piping, substitution, glob expansion, and 97\% test coverage. Built an \href{https://jsh-sandbox.maowtm.org}{\color{link}online sandbox} for the shell with Docker, Rust and Xterm.js.
       \end{itemize}
 
     \item \textbf{A-Level} \dashdiv{} (Shenzhen, China) Nanshan Chinese International College \dashdiv{} 2017-2019
@@ -56,7 +56,7 @@
   \section{Work Experience}
 
   \begin{itemize}
-    \item \textbf{Software developer} \dashdiv{} CORE Data Systems Ltd \dashdiv{} Jul 2020-present (part time)
+    \item \textbf{Software developer} \dashdiv{} CORE Data Systems Ltd \dashdiv{} Jul 2020-present (part-time)
 
     \begin{itemize}
       \item Educational game development for GCSE Physics/Chemistry/Biology.
@@ -79,7 +79,7 @@
     \item Facebook \dashdiv{} Hack-a-project \dashdiv{} 29\textsuperscript{th} Feb 2020
     \begin{itemize}
       \item Team of 4 people won second-place (against 8 other teams)
-      \item Designed a baisc React \& Nodejs App \ghurl{https://github.com/HAP-Team4/front-end} for bringing people who want to watch the same movie together.
+      \item Designed a basic React \& Nodejs App \ghurl{https://github.com/HAP-Team4/front-end} for bringing people who want to watch the same movie together.
     \end{itemize}
   \end{itemize}
 
@@ -112,7 +112,7 @@
 
     \begin{itemize}
       \item Technically a personal project, but was built for my high school to use in student union elections.
-      \item Like mentimeter, except each voter gets a personal QR code printed on paper to prevent double-voting.
+      \item Like Mentimeter, except each voter gets a personal QR code printed on paper to prevent double-voting.
       \item Front-end: React, backend: Node.js + MongoDB + pdflatex. WebSocket for lower latency.
       \item Successfully handled 300+ voters at once.
     \end{itemize}
