--- a/cv.tex
+++ b/cv.tex
@@ -32,7 +32,7 @@
   \begin{itemize}
     \item \textbf{BSc Computer Science} \dashdiv{} University College London \dashdiv{} 2019-2022
 
-      Have consistently achieved high grades. Notable coursework (able to provide code upon request):
+      Notable coursework (able to provide code upon request):
 
       \begin{itemize}
         \item A journey planner for the\tflicon{} London rail network (tube \& others) entirely in C.
