--- a/cv.tex
+++ b/cv.tex
@@ -56,7 +56,7 @@
   \section{Work Experience}
 
   \begin{itemize}
-    \item \textbf{Software developer} \dashdiv{} CORE Data Systems Ltd \dashdiv{} Jul 2020-present (part-time)
+    \item Software Developer $\xrightarrow{\text{Jun 2021}}$ \textbf{Lead Developer} \dashdiv{} CORE Data Systems Ltd \dashdiv{} Jul 2020-present (part-time)
 
     \begin{itemize}
       \item Educational game development for GCSE Physics/Chemistry/Biology.
