--- a/styles.tex
+++ b/styles.tex
@@ -12,6 +12,7 @@
 \usepackage{xcolor}
 \usepackage{textcomp}
 \usepackage{amsmath}
+\usepackage{mathtools}
 \usetikzlibrary{calc}
 \graphicspath{{icons/}}
 \input{icons.tex}
