--- a/cv.tex
+++ b/cv.tex
@@ -7,7 +7,7 @@
     \coordinate (topright) at (\textwidth, 0);
 
     \node[font=\Large] (name) at (topleft) {Tingmao Wang};
-    \node (bio) at (name.south west) {{\color{black!50!white}\emph{(\today)}} Second year Computer Science undergraduate at\uclicon{}UCL};
+    \node (bio) at (name.south west) {{\color{black!50!white}\emph{(\today)}} Third year Computer Science undergraduate at\uclicon{}UCL};
 
     \node[anchor=north east, text width=0.4\textwidth, align=flush right, inner ysep=0cm] (contacts) at (topright)
       {m@maowtm.org \\
@@ -31,6 +31,8 @@
 
   \begin{itemize}
     \item \textbf{BSc Computer Science} \dashdiv{} University College London \dashdiv{} 2019-2022
+
+      Second-year grade average: 82.3\%
 
       Notable coursework (able to provide code upon request):
 
