Consistent bolding in WORK EXPERIENCE

--- a/cv.tex
+++ b/cv.tex
@@ -58,7 +58,7 @@
   \section{Work Experience}
 
   \begin{itemize}
-    \item Technology Intern \dashdiv{} \textbf{Marshall Wace LLP} \dashdiv{} Jul-Aug 2021
+    \item \textbf{Technology Intern} \dashdiv{} Marshall Wace LLP \dashdiv{} Jul-Aug 2021
 
     \begin{itemize}
       \item Designed and built a release dashboard for developers to search for and check the build and deploy status of their projects.
