--- a/cv.tex
+++ b/cv.tex
@@ -93,18 +93,18 @@
     \end{itemize}
   \end{itemize}
 
-  \section{Skills}
+  \section{Personal Projects}
 
-  \begin{itemize}[itemsep=0.1\parskip]
-    \item Languages: (primary) Python, JavaScript/TypeScript, Rust; (fluent) C++, Java
+  \begin{itemize}
 
-    \item Web development: React, Svelte, Plain CSS \& SCSS.
+    \item \href{https://bellclone.maowtm.org/}{\color{link}\textbf{Bellclone}} \ghurl{https://github.com/micromaomao/bellclone}: a re-make of the old Winterbells game--a simple 2D game about jumping \dashdiv{} Sept 2021
 
-    \item Backend: NodeJS (Express), Python FastAPI, PostgreSQL, Redis.
+    \begin{itemize}
+      \item Built with Rust (wasm) and OpenGL. Uses an entity-component-system architecture. No game engine.
+      \item Supports simple multiplayer which allows seeing what other players are doing. Uses \href{https://google.github.io/flatbuffers/}{\color{link}flatbuffers} for fast serialization and WebSocket for communication.
+      \item Client: 120fps throughout on Chrome. Server: less than 2MiB memory usage with a couple of players.
+    \end{itemize}
 
-    \item Linux (scripting, programming, server administration), Git, Docker, Kubernetes
-
-    \item Security (web \& native) \& Basic cryptography.
   \end{itemize}
 
 \end{document}
