--- a/cv.tex
+++ b/cv.tex
@@ -47,7 +47,7 @@
 
         \item Designed and wrote a system specification for a hypothetical good delivery service for vulnerable people during COVID, matching requests with volunteers with an efficient algorithm. Received a top submission award.
 
-        \item Led a 3-person team on implementing a bash-like shell in Java, with piping, substitution, glob expansion, and 97\% test coverage. Built an \href{https://jsh-sandbox.maowtm.org}{\color{link}online sandbox} for the shell with Docker, Rust and Xterm.js.
+        \item Led a 3-person team on implementing a bash-like shell in Java, with piping, substitution, glob expansion, and 97\% test coverage. Built an \href{https://jsh-sandbox.maowtm.org}{\color{link}online sandbox} for the shell with Docker, Rust and Xterm.js (not part of the coursework).
       \end{itemize}
 
     \item \textbf{A-Level} \dashdiv{} (Shenzhen, China) Nanshan Chinese International College \dashdiv{} 2017-2019
@@ -61,7 +61,7 @@
     \item \textbf{Technology Intern} \dashdiv{} Marshall Wace LLP \dashdiv{} Jul-Aug 2021
 
     \begin{itemize}
-      \item Designed and built a release dashboard for developers to search for and check the build and deploy status of their projects.
+      \item Designed and built a dashboard for developers to search for and check the build and deploy status of their projects.
       \item Used React (front-end), Python/fastapi (backend) and \href{https://oss.redis.com/redisgraph/}{\color{link}Redisgraph} (a graph database based on Redis which supports \href{https://neo4j.com/developer/cypher/}{\color{link}Cypher}). Used APIs to read information from different services including Kubernetes. Used \href{https://prometheus.io/}{\color{link}Prometheus} to export metrics which helped debug performance issues.
       \item Worked in a team with 2 other interns. Delivered a project presentation and demo to the whole of the Technology division, and incorporated developer feedback. Wrote documentation for extending the system to add other service integrations.
     \end{itemize}
@@ -70,11 +70,9 @@
 
     \begin{itemize}
       \item Educational game development for GCSE Physics/Chemistry/Biology.
-      \item Debugged a large (200 kLOC) React project to make sure everything works on all major browsers.
-      \item Implemented new requirements in the existing PHP (Symfony) based system.
-      \begin{itemize}
-        \item Learned PHP and Symfony concepts on the go.
-      \end{itemize}
+      \item Familiarized with and worked on various aspect of an existing PHP + React project of moderate size, ensuring cross-browser compatibility and implementing additional features.
+      \item Created a payment form which integrates with PayPal to replace the existing manual invoicing.
+      \item Helped onboard new developers and reviewed their code. Promoted officially to Lead Developer.
     \end{itemize}
   \end{itemize}
 
@@ -105,6 +103,14 @@
       \item Client: 120fps throughout on Chrome. Server: less than 2MiB memory usage with a couple of players.
     \end{itemize}
 
+    \item \href{https://leafvote.mww.moe}{\color{link}\textbf{Leafvote}} \ghurl{https://github.com/micromaomao/leafvote}: A real-time live voting solution built with React and NodeJS for my high school \dashdiv{} Aug 2018
+
+  \end{itemize}
+
+  \section{Personal blog}
+
+  \begin{itemize}
+    \item \href{https://blog.maowtm.org/ct/en.html}{\color{link}\textbf{Interactive article on Certificate Transparency}} \dashdiv{} Aug 2020
   \end{itemize}
 
 \end{document}
