--- a/styles.tex
+++ b/styles.tex
@@ -3,7 +3,8 @@
 \usepackage{microtype}
 \usepackage[english]{babel}
 \usepackage[calc,showdow,english]{datetime2}
-\usepackage[margin=1cm]{geometry}
+\usepackage[margin=0.8cm]{geometry}
+\usepackage[T1]{fontenc}
 \usepackage{helvet}
 \renewcommand{\familydefault}{\sfdefault}
 \usepackage{tikz}
