--- a/cv.tex
+++ b/cv.tex
@@ -34,20 +34,14 @@
 
       Second-year grade average: 82.3\%
 
-      Notable coursework (able to provide code upon request):
-
       \begin{itemize}
-        \item A journey planner for the\tflicon{} London rail network (tube \& others) entirely in C.
-
-        \begin{itemize}
-          \item Shows paths with least station, least interchange or paths that avoid certain fare zones.
-        \end{itemize}
-
-        \item A Tetris bot in Python which can reliably keep itself alive long enough to reach a 1000 blocks limit, and scored 3rd place in the 140 person class.
+        \item Built a Tetris bot in Python which can reliably keep itself alive long enough to reach a 1000 blocks limit, and scored 3rd place in the 140 person class.
 
         \item Designed and wrote a system specification for a hypothetical good delivery service for vulnerable people during COVID, matching requests with volunteers with an efficient algorithm. Received a top submission award.
 
         \item Led a 3-person team on implementing a bash-like shell in Java, with piping, substitution, glob expansion, and 97\% test coverage. Built an \href{https://jsh-sandbox.maowtm.org}{\color{link}online sandbox} for the shell with Docker, Rust and Xterm.js (not part of the coursework).
+
+        \item Worked with Unity and the Alexa voice API as part of an industry project.
       \end{itemize}
 
     \item \textbf{A-Level} \dashdiv{} (Shenzhen, China) Nanshan Chinese International College \dashdiv{} 2017-2019
@@ -66,7 +60,7 @@
       \item Worked in a team with 2 other interns. Delivered a project presentation and demo to the whole of the Technology division, and incorporated developer feedback. Wrote documentation for extending the system to add other service integrations.
     \end{itemize}
 
-    \item Software Developer $\xrightarrow{\text{Jun 2021}}$ \textbf{Lead Developer} \dashdiv{} CORE Data Systems Ltd \dashdiv{} Jul 2020-$\ldots$-present (part-time)
+    \item (since June 2021) \textbf{Lead Developer} \dashdiv{} CORE Data Systems Ltd \dashdiv{} Jul 2020-$\ldots$-present (part-time)
 
     \begin{itemize}
       \item Educational game development for GCSE Physics/Chemistry/Biology.
@@ -95,22 +89,25 @@
 
   \begin{itemize}
 
-    \item \href{https://bellclone.maowtm.org/}{\color{link}\textbf{Bellclone}} \ghurl{https://github.com/micromaomao/bellclone}: a re-make of the old Winterbells game--a simple 2D game about jumping \dashdiv{} Sept 2021
+    \item \href{https://bellclone.maowtm.org/}{\color{link}\textbf{Bellclone}} \ghurl{https://github.com/micromaomao/bellclone}: A re-make of the old Winterbells game built with Rust (wasm) and OpenGL \dashdiv{} Sept 2021
 
     \begin{itemize}
-      \item Built with Rust (wasm) and OpenGL. Uses an entity-component-system architecture. No game engine.
-      \item Supports simple multiplayer which allows seeing what other players are doing. Uses \href{https://google.github.io/flatbuffers/}{\color{link}flatbuffers} for fast serialization and WebSocket for communication.
+      \item Supports simple multiplayer which allows seeing what other players are doing.
+      \item Uses an entity-component-system architecture. Uses \href{https://google.github.io/flatbuffers/}{\color{link}flatbuffers} for serialization and WebSocket for communication.
       \item Client: 120fps throughout on Chrome. Server: less than 2MiB memory usage with a couple of players.
     \end{itemize}
 
     \item \href{https://leafvote.mww.moe}{\color{link}\textbf{Leafvote}} \ghurl{https://github.com/micromaomao/leafvote}: A real-time live voting solution built with React and NodeJS for my high school \dashdiv{} Aug 2018
 
-  \end{itemize}
+    \item \textbf{go-ecbpass} \ghurl{https://github.com/micromaomao/go-ecbpass}: A stateless, deterministic password manager built in Go \dashdiv{} Oct 2018
 
-  \section{Personal blog}
+    \item \href{https://paper.sc}{\color{link}\textbf{paper.sc}} \ghurl{https://github.com/micromaomao/schsrch}: A past paper search engine built with React, NodeJS and Elasticsearch \dashdiv{} 2016-2019
 
-  \begin{itemize}
-    \item \href{https://blog.maowtm.org/ct/en.html}{\color{link}\textbf{Interactive article on Certificate Transparency}} \dashdiv{} Aug 2020
+    \begin{itemize}
+      \item Average of \raisebox{0.2\baselineskip}{\texttildelow}9000 daily searches over 365 days (2019-2020); recommended by a number of teachers.
+      \item Custom PDF viewer with automatic cross-reference to solution sheets built with PDF.js.
+    \end{itemize}
+
   \end{itemize}
 
 \end{document}
