--- a/cv.tex
+++ b/cv.tex
@@ -91,13 +91,12 @@
 
     \item \href{https://bellclone.maowtm.org/}{\color{link}\textbf{Bellclone}} \ghurl{https://github.com/micromaomao/bellclone}: A re-make of the old Winterbells game built with Rust (wasm) and OpenGL \dashdiv{} Sept 2021
 
-    \begin{itemize}
-      \item Supports simple multiplayer which allows seeing what other players are doing.
-      \item Uses an entity-component-system architecture. Uses \href{https://google.github.io/flatbuffers/}{\color{link}flatbuffers} for serialization and WebSocket for communication.
-      \item Client: 120fps throughout on Chrome. Server: less than 2MiB memory usage with a couple of players.
-    \end{itemize}
-
     \item \href{https://leafvote.mww.moe}{\color{link}\textbf{Leafvote}} \ghurl{https://github.com/micromaomao/leafvote}: A real-time live voting solution built with React and NodeJS for my high school \dashdiv{} Aug 2018
+
+    \begin{itemize}
+      \item Uses MongoDB, WebSocket for lower latency, and LaTeX for voting ticket generation.
+      \item Successfully handled 300+ voters at once.
+    \end{itemize}
 
     \item \textbf{go-ecbpass} \ghurl{https://github.com/micromaomao/go-ecbpass}: A stateless, deterministic password manager built in Go \dashdiv{} Oct 2018
 
