--- a/cv.tex
+++ b/cv.tex
@@ -73,13 +73,13 @@
   \section{Competition}
 
   \begin{itemize}
-    \item Showcode + ARM \dashdiv{} Varsity Code 2021/22 \dashdiv{} 4\textsuperscript{th} Nov 2021
+    \item Showcode + ARM (sponsor) \dashdiv{} VarsityCode 2021/22 \dashdiv{} 4\textsuperscript{th} Nov 2021
     \begin{itemize}
       \item Won second place in an algorithm contest of 300+ people, rewarded with £200 Amazon gift card.
     \end{itemize}
-    \item HIRED + Tesco \dashdiv{} UK Virtual Coding Challenge \dashdiv{} 7\textsuperscript{th} Jul 2020
+    \item HIRED + Tesco (sponsor) \dashdiv{} UK Virtual Coding Challenge \dashdiv{} 7\textsuperscript{th} Jul 2020
     \begin{itemize}
-      \item Won first place in an algorithm contest of 180 people, rewarded with £1,000 Tesco (sponsor) gift card.
+      \item Won first place in an algorithm contest of 180 people, rewarded with £1,000 Tesco gift card.
     \end{itemize}
     \item Facebook \dashdiv{} Hack-a-project \dashdiv{} 29\textsuperscript{th} Feb 2020
     \begin{itemize}
