--- a/cv.tex
+++ b/cv.tex
@@ -11,8 +11,8 @@
 
     \node[anchor=north east, text width=0.4\textwidth, align=flush right, inner ysep=0cm] (contacts) at (topright)
       {m@maowtm.org \\
-        {\color{link}\href{https://github.com/micromaomao}{\githubicon{} micromaomao}}%
-          \IfFileExists{phone_number.txt}{\\ \input{phone_number.txt}}{}
+        {\color{link}\href{https://github.com/micromaomao}{\githubicon{} micromaomao}}
+          % \IfFileExists{phone_number.txt}{\\ \input{phone_number.txt}}{}
         };
 
     \coordinate (bottomleft) at ($(bio.south west)+(0, -0.1cm)$);
@@ -109,6 +109,8 @@
       \item Average of \raisebox{0.2\baselineskip}{\texttildelow}9000 daily searches over 365 days (2019-2020); recommended by a number of teachers.
       \item Custom PDF viewer with automatic cross-reference to solution sheets built with PDF.js.
     \end{itemize}
+
+    \item \href{https://blog.maowtm.org/}{\color{link}\textbf{Technical blog}}: Some posts on security.
 
   \end{itemize}
 
