--- a/styles.tex
+++ b/styles.tex
@@ -44,7 +44,7 @@
 \setlength{\parindent}{0em}
 \setlength{\parskip}{1em plus 0.5em minus 0.5em}
 
-\setitemize{topsep=0em, itemsep=0.5\parskip, partopsep=0em, parsep=0.5\parskip}
+\setitemize{topsep=0em, itemsep=0.5\parskip minus 0.2em, partopsep=0em, parsep=0.5\parskip}
 
 \colorlet{link}{blue!50!black}
 
