--- a/cv.tex
+++ b/cv.tex
@@ -39,20 +39,35 @@
 
         \item Designed and wrote a system specification for a hypothetical good delivery service for vulnerable people during COVID, matching requests with volunteers with an efficient algorithm. Received a top submission award.
 
-        \item Led a 3-person team on implementing a bash-like shell in Java, with piping, substitution, glob expansion, and 97\% test coverage. Built an \href{https://jsh-sandbox.maowtm.org}{\color{link}online sandbox} for the shell with Docker, Rust and Xterm.js (not part of the coursework).
-
         \item Worked with Unity and the Alexa voice API as part of an industry project.
+
+        \item Worked on and help released a container image build system \href{https://modus-continens.com/}{\color{link}Modus} as my final year dissertation.
       \end{itemize}
 
-    \item \textbf{A-Level} \dashdiv{} (Shenzhen, China) Nanshan Chinese International College \dashdiv{} 2017-2019
+    % \item \textbf{A-Level} \dashdiv{} (Shenzhen, China) Nanshan Chinese International College \dashdiv{} 2017-2019
 
-      Math, Further Math, Physics and Economics \dashdiv{} A*A*A*A*
+    %   Math, Further Math, Physics and Economics \dashdiv{} A*A*A*A*
   \end{itemize}
 
   \section{Work Experience}
 
   \begin{itemize}
-    \item \textbf{Technology Intern} \dashdiv{} Marshall Wace LLP \dashdiv{} Jul-Aug 2021
+    {%
+      \transparent{0.5}%
+      \item \textbf{Software Engineer} \dashdiv{} Microsoft \dashdiv{} Sept 2022-(incoming)
+    }
+
+    \item \textbf{Lead Developer} \dashdiv{} CORE Data Systems \dashdiv{} Jul 2020-$\ldots$-Aug 2022 (part-time)
+
+    \begin{itemize}
+      \item Educational game development for GCSE Physics/Chemistry/Biology.
+      \item Familiarized with and worked on various aspect of an existing PHP + React project of moderate size, ensuring cross-browser compatibility and implementing additional features.
+      \item Created a payment form which integrates with PayPal to replace the existing manual invoicing.
+      \item Helped onboard new developers and reviewed their code. Promoted officially to Lead Developer.
+      \item Took over responsibilities from a leaving lead developer to manage the Google Cloud-based infrastructure.
+    \end{itemize}
+
+    \item \textbf{Technology Intern} \dashdiv{} Marshall Wace \dashdiv{} Jul-Aug 2021
 
     \begin{itemize}
       \item Designed and built a dashboard for developers to search for and check the build and deploy status of their projects.
@@ -60,14 +75,6 @@
       \item Worked in a team with 2 other interns. Delivered a project presentation and demo to the whole of the Technology division, and incorporated developer feedback. Wrote documentation for extending the system to add other service integrations.
     \end{itemize}
 
-    \item (since June 2021) \textbf{Lead Developer} \dashdiv{} CORE Data Systems Ltd \dashdiv{} Jul 2020-$\ldots$-present (part-time)
-
-    \begin{itemize}
-      \item Educational game development for GCSE Physics/Chemistry/Biology.
-      \item Familiarized with and worked on various aspect of an existing PHP + React project of moderate size, ensuring cross-browser compatibility and implementing additional features.
-      \item Created a payment form which integrates with PayPal to replace the existing manual invoicing.
-      \item Helped onboard new developers and reviewed their code. Promoted officially to Lead Developer.
-    \end{itemize}
   \end{itemize}
 
   \section{Competition}
@@ -81,11 +88,11 @@
     \begin{itemize}
       \item Won first place in an algorithm contest of 180 people, rewarded with £1,000 Tesco gift card.
     \end{itemize}
-    \item Facebook \dashdiv{} Hack-a-project \dashdiv{} 29\textsuperscript{th} Feb 2020
-    \begin{itemize}
-      \item Team of 4 people won second-place (against 8 other teams)
-      \item Designed a basic React \& Nodejs App \ghurl{https://github.com/HAP-Team4/front-end} for bringing people who want to watch the same movie together.
-    \end{itemize}
+    % \item Facebook \dashdiv{} Hack-a-project \dashdiv{} 29\textsuperscript{th} Feb 2020
+    % \begin{itemize}
+    %   \item Team of 4 people won second-place (against 8 other teams)
+    %   \item Designed a basic React \& Nodejs App \ghurl{https://github.com/HAP-Team4/front-end} for bringing people who want to watch the same movie together.
+    % \end{itemize}
   \end{itemize}
 
   \section{Personal Projects}
