--- a/styles.tex
+++ b/styles.tex
@@ -14,6 +14,7 @@
 \usepackage{textcomp}
 \usepackage{amsmath}
 \usepackage{mathtools}
+\usepackage{transparent}
 \usetikzlibrary{calc}
 \graphicspath{{icons/}}
 \input{icons.tex}
