--- a/cv.tex
+++ b/cv.tex
@@ -32,7 +32,7 @@
   \begin{itemize}
     \item \textbf{BSc Computer Science} \dashdiv{} University College London \dashdiv{} 2019-2022
 
-      Second-year grade average: 82.3\%
+      First Class Honours: final average 82.84\%
 
       \begin{itemize}
         \item Built a Tetris bot in Python which can reliably keep itself alive long enough to reach a 1000 blocks limit, and scored 3rd place in the 140 person class.
@@ -99,6 +99,8 @@
 
   \begin{itemize}
 
+    \item \href{https://books.maowtm.org}{\textbf{\color{link}books.maowtm.org}} \ghurl{https://github.com/micromaomao/books.maowtm.org} \dashdiv{} A 3D virtual bookshelf built with Blender and Three.JS \dashdiv{} Jun 2022
+
     \item \href{https://bellclone.maowtm.org/}{\color{link}\textbf{Bellclone}} \ghurl{https://github.com/micromaomao/bellclone}: A re-make of the old Winterbells game built with Rust (wasm) and OpenGL \dashdiv{} Sept 2021
 
     \item \href{https://leafvote.mww.moe}{\color{link}\textbf{Leafvote}} \ghurl{https://github.com/micromaomao/leafvote}: A real-time live voting solution built with React and NodeJS for my high school \dashdiv{} Aug 2018
@@ -117,7 +119,7 @@
       \item Custom PDF viewer with automatic cross-reference to solution sheets built with PDF.js.
     \end{itemize}
 
-    \item \href{https://blog.maowtm.org/}{\color{link}\textbf{Technical blog}}: Some posts on security.
+    % \item \href{https://blog.maowtm.org/}{\color{link}\textbf{Technical blog}}: Some posts on security.
 
   \end{itemize}
 
