--- a/icons.tex
+++ b/icons.tex
@@ -14,3 +14,4 @@
 \def\blueghicon{\hskip 0em\newsvgicon{icons/bluegithub.pdf_tex}{0.3em}}
 \def\tflicon{\newsvgicon{icons/tfl.pdf_tex}{0.3em}\hskip -0.15em}
 \def\trademark{™}
+\def\pencil{\newsvgicon{icons/pencil.pdf_tex}{0.85em}\hskip 0.2em}
