--- a/styles.tex
+++ b/styles.tex
@@ -15,6 +15,7 @@
 \usepackage{amsmath}
 \usepackage{mathtools}
 \usepackage{transparent}
+\usepackage{setspace}
 \usetikzlibrary{calc}
 \graphicspath{{icons/}}
 \input{icons.tex}
@@ -44,6 +45,7 @@
 
 \setlength{\parindent}{0em}
 \setlength{\parskip}{1em plus 0.5em minus 0.5em}
+\setstretch{1.05}
 
 \setitemize{topsep=0em, itemsep=0.5\parskip minus 0.2em, partopsep=0em, parsep=0.5\parskip}
 
