--- a/cv.tex
+++ b/cv.tex
@@ -12,10 +12,9 @@
     Graduate Software Engineer at Microsoft UK};
 
     \node[anchor=north east, text width=0.4\textwidth, align=flush right, inner ysep=0cm] (contacts) at (topright)
-      {m@maowtm.org \\
+      {m@{\color{link}\href{https://maowtm.org}{maowtm.org}} \\
         {\color{link}\href{https://github.com/micromaomao}{\githubicon{} micromaomao}} \\
         \href{https://blog.maowtm.org/}{\color{link}\pencil{}Blog}
-          % \IfFileExists{phone_number.txt}{\\ \input{phone_number.txt}}{}
         };
 
     \coordinate (bottomleft) at ($(bio.south west)+(0, -0.1cm)$);
@@ -63,11 +62,11 @@
     \item \textbf{Lead Developer} \dashdiv{} CORE Data Systems \dashdiv{} Jul 2020-$\ldots$-Sept 2022 (part-time)
 
     \begin{itemize}
-      \item Educational game development for GCSE Physics/Chemistry/Biology.
-      \item Familiarized with and worked on various aspect of an existing PHP + React project of moderate size, ensuring cross-browser compatibility and implementing additional features.
-      \item Created a payment form which integrates with PayPal to replace the existing manual invoicing.
-      \item Helped onboard new developers and reviewed their code. Promoted officially to Lead Developer.
-      \item Took over responsibilities from a leaving lead developer to manage the Google Cloud-based infrastructure.
+      \item Overtook the development of a suite of games for GCSE sciences, maintaining a PHP + React codebase.
+      \item Created PayPal integration to replace the existing manual invoicing.
+      \item Helped interview and onboard new developers and reviewed their code. Promoted officially to Lead Developer.
+      \item Took over responsibilities from a leaving lead developer to manage the Google Cloud-based infrastructure, utilising App and Compute Engine, Storage, Cloud SQL and Datastore, and other products.
+      \item Saved £60 per month in cloud cost by converting a VM-based reverse proxy to use \href{https://workers.cloudflare.com/}{\color{link}Cloudflare Workers} instead.
     \end{itemize}
 
     \item \textbf{Technology Intern} \dashdiv{} Marshall Wace \dashdiv{} Jul-Aug 2021
