--- a/cv.tex
+++ b/cv.tex
@@ -54,12 +54,9 @@
   \section{Work Experience}
 
   \begin{itemize}
-    {%
-      \transparent{0.5}%
-      \item \textbf{Software Engineer} \dashdiv{} Microsoft \dashdiv{} Sept 2022-(incoming)
-    }
+    \item \textbf{Software Engineer} \dashdiv{} Microsoft \dashdiv{} Sept 2022--current
 
-    \item \textbf{Lead Developer} \dashdiv{} CORE Data Systems \dashdiv{} Jul 2020-$\ldots$-Sept 2022 (part-time)
+    \item \textbf{Lead Developer} \dashdiv{} CORE Data Systems \dashdiv{} Jul 2020--$\ldots$--Sept 2022 (part-time)
 
     \begin{itemize}
       \item Overtook the development of a suite of games for GCSE sciences, maintaining a PHP + React codebase.
@@ -69,7 +66,7 @@
       \item Saved £60 per month in cloud cost by converting a VM-based reverse proxy to use \href{https://workers.cloudflare.com/}{\color{link}Cloudflare Workers} instead.
     \end{itemize}
 
-    \item \textbf{Technology Intern} \dashdiv{} Marshall Wace \dashdiv{} Jul-Aug 2021
+    \item \textbf{Technology Intern} \dashdiv{} Marshall Wace \dashdiv{} Jul--Aug 2021
 
     \begin{itemize}
       \item Designed and built a dashboard for developers to search for and check the build and deploy status of their projects.
@@ -121,7 +118,7 @@
 
     \item \textbf{go-ecbpass} \ghurl{https://github.com/micromaomao/go-ecbpass}: A stateless, deterministic password manager built in Go \dashdiv{} Oct 2018
 
-    \item \href{https://paper.sc}{\color{link}\textbf{paper.sc}} \ghurl{https://github.com/micromaomao/schsrch}: A past paper search engine built with React, NodeJS and Elasticsearch \dashdiv{} 2016-2019
+    \item \href{https://paper.sc}{\color{link}\textbf{paper.sc}} \ghurl{https://github.com/micromaomao/schsrch}: A past paper search engine built with React, NodeJS and Elasticsearch \dashdiv{} 2016--2019
 
     \begin{itemize}
       \item Average of \raisebox{0.2\baselineskip}{\texttildelow}9000 daily searches over 365 days (2019-2020); recommended by a number of teachers.
