--- a/cv.tex
+++ b/cv.tex
@@ -34,7 +34,7 @@
   \begin{itemize}
     \item \textbf{BSc Computer Science} \dashdiv{} University College London \dashdiv{} 2019-2022
 
-      First Class Honours: final average 82.84\%
+      First Class Honours: final average 82.84\%. Entered Dean's List for ``outstanding academic performance''.
 
       \begin{itemize}
         \item Built a Tetris bot in Python which can reliably keep itself alive long enough to reach a 1000 blocks limit, and scored 3rd place in the 140 person class.
