--- a/cv.tex
+++ b/cv.tex
@@ -32,23 +32,31 @@
   \section{Work Experience}
 
   \begin{itemize}
-    \item \textbf{Software Engineer} \dashdiv{} Microsoft \dashdiv{} Sept 2022--current
+    \item \textbf{Software Engineer} (L60) \dashdiv{} Microsoft \dashdiv{} Sept 2022--current
 
-    \item \textbf{Lead Developer} \dashdiv{} CORE Data Systems \dashdiv{} Jul 2020--$\ldots$--Sept 2022 (part-time)
+    \begin{itemize}
+      \item In-depth experience with various Azure products and toolings such as App Service, Cognitive Services / OpenAI, Entra~ID (AAD), Kubernetes, Bicep/ARM templates, various IaaS offerings, and internal security and safe deployment systems.
+      \item Worked on C, C\#, Python, Rust and PowerShell codebases, in both a Linux and Windows environment, at times building and debugging Docker containers or VM images, and creating Grafana dashboards or other observability channels.
+      \item Facilitated and at times driven the resolution of performance or design issues via careful debugging and testing, as well as by working closely with team members and cross-team contacts including Azure Networking, ACS, Identity and others, improving product realiability and security.
+      \item Implemented product feature in alignment with internal security and compliance standard, contributed to threat modelling, and raised security concerns which resulted in changes being implemented.
+      \item Wrote design docs for a few product features, created architecture, networking and protocol docs and diagrams, incorporated review feedback, and presented those to stakeholders.
+    \end{itemize}
+
+    \item \textbf{Lead Developer} \dashdiv{} CORE Data Systems \dashdiv{} Jul 2020--Sept 2022 (part-time)
 
     \begin{itemize}
       \item Overtook the development of a suite of games for GCSE sciences, maintaining a PHP + React codebase.
       \item Created PayPal integration to replace the existing manual invoicing.
-      \item Helped interview and onboard new developers and reviewed their code. Promoted officially to Lead Developer.
+      \item Interviewed and onboarded new developers and reviewed their code.
       \item Took over responsibilities from a leaving lead developer to manage the Google Cloud-based infrastructure, utilising App and Compute Engine, Storage, Cloud SQL and Datastore, and other products.
-      \item Saved £60 per month in cloud cost by converting a VM-based reverse proxy to use \href{https://workers.cloudflare.com/}{\color{link}Cloudflare Workers} instead.
+      \item Saved £60 per month in cloud cost by converting a VM-based reverse proxy to use Cloudflare Workers instead.
     \end{itemize}
 
     \item \textbf{Technology Intern} \dashdiv{} Marshall Wace \dashdiv{} Jul--Aug 2021
 
     \begin{itemize}
       \item Designed and built a dashboard for developers to search for and check the build and deploy status of their projects.
-      \item Used React (front-end), Python/fastapi (backend) and \href{https://oss.redis.com/redisgraph/}{\color{link}Redisgraph} (a graph database based on Redis which supports \href{https://neo4j.com/developer/cypher/}{\color{link}Cypher}). Used APIs to read information from different services including Kubernetes. Used \href{https://prometheus.io/}{\color{link}Prometheus} to export metrics which helped debug performance issues.
+      \item Used React (front-end), Python/fastapi (backend) and Redisgraph (a graph database based on Redis which supports Cypher). Used APIs to read information from different services including Kubernetes. Used Prometheus to export metrics which helped debug performance issues.
       \item Worked in a team with 2 other interns. Delivered a project presentation and demo to the whole of the Technology division, and incorporated developer feedback. Wrote documentation for extending the system to add other service integrations.
     \end{itemize}
 
@@ -76,60 +84,43 @@
     %   Math, Further Math, Physics and Economics \dashdiv{} A*A*A*A*
   \end{itemize}
 
-  \section{Competition}
+  \section{Additional activities}
 
   \begin{itemize}
-    \item Showcode + ARM (sponsor) \dashdiv{} VarsityCode 2021/22 \dashdiv{} 4\textsuperscript{th} Nov 2021
-    \begin{itemize}
-      \item Won second place in an algorithm contest of 300+ people, rewarded with £200 Amazon gift card.
-    \end{itemize}
-    \item HIRED + Tesco (sponsor) \dashdiv{} UK Virtual Coding Challenge \dashdiv{} 7\textsuperscript{th} Jul 2020
-    \begin{itemize}
-      \item Won first place in an algorithm contest of 180 people, rewarded with £1,000 Tesco gift card.
-    \end{itemize}
-    % \item Facebook \dashdiv{} Hack-a-project \dashdiv{} 29\textsuperscript{th} Feb 2020
-    % \begin{itemize}
-    %   \item Team of 4 people won second-place (against 8 other teams)
-    %   \item Designed a basic React \& Nodejs App \ghurl{https://github.com/HAP-Team4/front-end} for bringing people who want to watch the same movie together.
-    % \end{itemize}
-  \end{itemize}
-
-  \section{Publications}
-
-  \begin{itemize}
-    \item \textit{C. Tomy, T. Wang, E. T. Barr, S. Mechtaev} \\
-    ``\textbf{\href{https://2022.esec-fse.org/details/fse-2022-research-papers/55/Modus-A-Datalog-Dialect-for-Building-Container-Images}{\color{link}Modus: A Datalog Dialect for Building Container Images}}'', ESEC/FSE, Sep. 2022
-  \end{itemize}
-
-  \section{Volunteering}
-
-  \begin{itemize}
-    \item \textbf{GCSE Math Tutor} \dashdiv{} \href{https://www.theaccessproject.org.uk}{\color{link}The Access Project} \dashdiv{} Dec 2023--current
+    \item Dec 2023--current: \textbf{GCSE Math Tutor} \dashdiv{} Volunteering @ \href{https://www.theaccessproject.org.uk}{\color{link}The Access Project}
+    \item Jul 2020: Won first place in an sponsored algorithm contest of 180 people, rewarded with £1,000 Tesco gift card.
   \end{itemize}
 
   \section{Personal Projects}
 
   \begin{itemize}
+    \item \href{https://chat.maowtm.org}{\textbf{\color{link}chat.maowtm.org}} \ghurl{https://github.com/micromaomao/chat.maowtm.org} \dashdiv{} AI chatbot designed to answer questions about me, built for fun \dashdiv{} Aug 2023
 
-    \item \href{https://books.maowtm.org}{\textbf{\color{link}books.maowtm.org}} \ghurl{https://github.com/micromaomao/books.maowtm.org} \dashdiv{} A 3D virtual bookshelf built with Blender and Three.JS \dashdiv{} Jun 2022
+    % \begin{itemize}
+    %   \item Based on Retrieval Augmented Generation, using OpenAI completion and embedding models, built as a Next.JS application with Fluent UI framework and PostgreSQL (Neon) as backend
+    % \end{itemize}
+
+    % \item \href{https://books.maowtm.org}{\textbf{\color{link}books.maowtm.org}} \ghurl{https://github.com/micromaomao/books.maowtm.org} \dashdiv{} A 3D virtual bookshelf built with Blender and Three.JS \dashdiv{} Jun 2022
 
     \item \href{https://bellclone.maowtm.org/}{\color{link}\textbf{Bellclone}} \ghurl{https://github.com/micromaomao/bellclone}: A re-make of the old Winterbells game built with Rust (wasm) and OpenGL \dashdiv{} Sept 2021
 
-    \item \href{https://leafvote.mww.moe}{\color{link}\textbf{Leafvote}} \ghurl{https://github.com/micromaomao/leafvote}: A real-time live voting solution built with React and NodeJS for my high school \dashdiv{} Aug 2018
+    \item \href{https://leafvote.mww.moe}{\color{link}\textbf{Leafvote}} \ghurl{https://github.com/micromaomao/leafvote}: A paper-ticket based live voting solution built with React and NodeJS for my high school \dashdiv{} Aug 2018
 
-    \begin{itemize}
-      \item Uses MongoDB, WebSocket for lower latency, and LaTeX for voting ticket generation.
-      \item Successfully handled 300+ voters at once.
-    \end{itemize}
+    % \begin{itemize}
+    %   \item Uses MongoDB, WebSocket for lower latency, and LaTeX for voting ticket generation.
+    %   \item Successfully handled 300+ voters at once.
+    % \end{itemize}
 
     \item \textbf{go-ecbpass} \ghurl{https://github.com/micromaomao/go-ecbpass}: A stateless, deterministic password manager built in Go \dashdiv{} Oct 2018
 
-    \item \href{https://paper.sc}{\color{link}\textbf{paper.sc}} \ghurl{https://github.com/micromaomao/schsrch}: A past paper search engine built with React, NodeJS and Elasticsearch \dashdiv{} 2016--2019
+    \item \href{https://paper.sc}{\color{link}\textbf{paper.sc}} \ghurl{https://github.com/micromaomao/schsrch}: A past paper search engine built with React, NodeJS, Elasticsearch and PDF.js \dashdiv{} 2016--2019
 
-    \begin{itemize}
-      \item Average of \raisebox{0.2\baselineskip}{\texttildelow}9000 daily searches over 365 days (2019-2020); recommended by a number of teachers.
-      \item Custom PDF viewer with automatic cross-reference to solution sheets built with PDF.js.
-    \end{itemize}
+    % \begin{itemize}
+    %   \item Average of \raisebox{0.2\baselineskip}{\texttildelow}9000 daily searches over 365 days (2019-2020); recommended by a number of teachers.
+    %   % \item Custom PDF viewer with automatic cross-reference to solution sheets built with PDF.js.
+    % \end{itemize}
+
+    % (More projects available on GitHub)
 
   \end{itemize}
 
