--- a/cv.tex
+++ b/cv.tex
@@ -9,7 +9,7 @@
     \node[font=\Large] (name) at (topleft) {Tingmao Wang};
     \node (bio) at (name.south west) {%
     % {\color{black!50!white}\emph{(\today)}}
-    Software Engineer at Microsoft UK};
+    Software Engineer at Microsoft UK; 2022 Computer Science graduate from UCL};
 
     \node[anchor=north east, text width=0.4\textwidth, align=flush right, inner ysep=0cm] (contacts) at (topright)
       {m@{\color{link}\href{https://maowtm.org}{maowtm.org}} \\
