--- a/cv.tex
+++ b/cv.tex
@@ -37,7 +37,8 @@
     \begin{itemize}
       \item In-depth experience with various Azure products and toolings such as App Service, Cognitive Services / OpenAI, Entra~ID (AAD), Kubernetes, Bicep/ARM templates, various IaaS offerings, and internal security and safe deployment systems.
       \item Worked on C, C\#, Python, Rust and PowerShell codebases, in both a Linux and Windows environment, at times building and debugging Docker containers or VM images, and creating Grafana dashboards or other observability channels.
-      \item Facilitated and at times driven the resolution of performance or design issues via careful debugging and testing, as well as by working closely with team members and cross-team contacts including Azure Networking, ACS, Identity and others, improving product realiability and security.
+      \item Driven the resolution of performance or design issues via careful debugging and testing, as well as by working closely with team members and cross-team contacts including Azure Networking, ACS, Identity and others.
+      \item Prototyped various features quickly to help stakeholder assess requirements or facilitate customer demos.
       \item Implemented product feature in alignment with internal security and compliance standard, contributed to threat modelling, and raised security concerns which resulted in changes being implemented.
       \item Wrote design docs for a few product features, created architecture, networking and protocol docs and diagrams, incorporated review feedback, and presented those to stakeholders.
     \end{itemize}
