--- a/cv.tex
+++ b/cv.tex
@@ -38,8 +38,8 @@
       \item In-depth experience with various Azure products and toolings such as App Service, Cognitive Services / OpenAI, Entra~ID (AAD), Kubernetes, Bicep/ARM templates, various IaaS offerings, and internal security and safe deployment systems.
       \item Worked on C, C\#, Python, Rust and PowerShell codebases, in both a Linux and Windows environment, at times building and debugging Docker containers or VM images, and creating Grafana dashboards or other observability channels.
       \item Driven the resolution of performance or design issues via careful debugging and testing, as well as by working closely with team members and cross-team contacts including Azure Networking, ACS, Identity and others.
-      \item Prototyped various features quickly to help stakeholder assess requirements or facilitate customer demos.
-      \item Implemented product feature in alignment with internal security and compliance standard, contributed to threat modelling, and raised security concerns which resulted in changes being implemented.
+      \item Prototyped various features quickly to help stakeholders assess requirements or facilitate customer demos.
+      \item Implemented product features in alignment with internal security and compliance standards, contributed to threat modelling, and raised security concerns which resulted in changes being implemented.
       \item Wrote design docs for a few product features, created architecture, networking and protocol docs and diagrams, incorporated review feedback, and presented those to stakeholders.
     \end{itemize}
 
@@ -77,7 +77,7 @@
 
         \item Worked with Unity and the Alexa voice API as part of an industry project.
 
-        \item Worked on and help released a container image build system \href{https://modus-continens.com/}{\color{link}Modus} as my final year dissertation.
+        \item Worked on and helped release a container image build system \href{https://modus-continens.com/}{\color{link}Modus} as my final year dissertation.
       \end{itemize}
 
     % \item \textbf{A-Level} \dashdiv{} (Shenzhen, China) Nanshan Chinese International College \dashdiv{} 2017-2019
