--- a/cv.tex
+++ b/cv.tex
@@ -95,7 +95,7 @@
   \section{Personal Projects}
 
   \begin{itemize}
-    \item \href{https://chat.maowtm.org}{\textbf{\color{link}chat.maowtm.org}} \ghurl{https://github.com/micromaomao/chat.maowtm.org} \dashdiv{} AI chatbot designed to answer questions about me, built for fun \dashdiv{} Aug 2023
+    \item \href{https://chat.maowtm.org}{\textbf{\color{link}chat.maowtm.org}} \ghurl{https://github.com/micromaomao/chat.maowtm.org}: RAG-based AI chatbot designed to answer questions about me, built for fun \dashdiv{} Aug 2023
 
     % \begin{itemize}
     %   \item Based on Retrieval Augmented Generation, using OpenAI completion and embedding models, built as a Next.JS application with Fluent UI framework and PostgreSQL (Neon) as backend
